src/test/ui/impl-trait/auto-trait.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait` for type `D<OpaqueType>`:
  --> $DIR/auto-trait.rs:19:1
   |
LL | impl<T: Send> AnotherTrait for T { }
   | -------------------------------- first implementation here
...
LL | impl AnotherTrait for D<OpaqueType> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `D<OpaqueType>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
